Update Time Series Forcasting.ipynb

--- a/Time Series Forcasting.ipynb
+++ b/Time Series Forcasting.ipynb
@@ -35,7 +35,7 @@
    "outputs": [],
    "source": [
     "#read_data\n",
-    "sales=pd.read_csv(r'C:\\Users\\1007641\\Documents\\Personal\\sales-cars.csv',index_col=0,parse_dates=[0],date_parser=parser)"
+    "sales=pd.read_csv(r'C:\\Users\\Documents\\Personal\\sales-cars.csv',index_col=0,parse_dates=[0],date_parser=parser)"
    ]
   },
   {
